add index and remove theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-theme: jekyll-theme-minimal
-title: Pearmints's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Pearmints's page
+description: A place to share my projects and ideas.
